@@ -35,9 +35,6 @@ if (isset($plugin_list)) {
     return;
 }
 
-ini_set('memory_limit', '128M');
-set_time_limit(120);
-
 $i = 0;
 $len = 0;
 $buffer = "";
